@@ -1,8 +1,15 @@
+2009-04-24  Lillian Angel  <langel@redhat.com>
+
+	Fixes #497191
+	* Makefile.am
+	(NETBEANS_PROFILER_MD5SUM): Updated.
+	(stamps/nbplatform.stamp): Fixed to build on amd64 properly.
+
 2009-04-24 Xerxes Rånby <xerxes@zafena.se>
 
-        * patches/icedtea-jpegclasses.patch
-        (openjdk/jdk/src/share/classes/com/sun/image/codec/jpeg/JPEGImageEncoder.java
-        setJPEGEncodeParam): New function.
+	* patches/icedtea-jpegclasses.patch
+	(openjdk/jdk/src/share/classes/com/sun/image/codec/jpeg/JPEGImageEncoder.java
+	setJPEGEncodeParam): New function.
 
 2009-04-23 Deepak Bhole <dbhole@redhat.com>
 
